; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_gfxhub_v1_1.c_gfxhub_v1_1_get_xgmi_info.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_gfxhub_v1_1.c_gfxhub_v1_1_get_xgmi_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32, i32 }

@GC = common dso_local global i32 0, align 4
@mmMC_VM_XGMI_LFB_CNTL = common dso_local global i32 0, align 4
@MC_VM_XGMI_LFB_CNTL = common dso_local global i32 0, align 4
@PF_MAX_REGION = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@PF_LFB_REGION = common dso_local global i32 0, align 4
@mmMC_VM_XGMI_LFB_SIZE = common dso_local global i32 0, align 4
@MC_VM_XGMI_LFB_SIZE = common dso_local global i32 0, align 4
@PF_LFB_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gfxhub_v1_1_get_xgmi_info(%struct.amdgpu_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.amdgpu_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.amdgpu_device* %0, %struct.amdgpu_device** %3, align 8
  %6 = load i32, i32* @GC, align 4
  %7 = load i32, i32* @mmMC_VM_XGMI_LFB_CNTL, align 4
  %8 = call i32 @RREG32_SOC15(i32 %6, i32 0, i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @MC_VM_XGMI_LFB_CNTL, align 4
  %11 = load i32, i32* @PF_MAX_REGION, align 4
  %12 = call i32 @REG_GET_FIELD(i32 %9, i32 %10, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %61

15:                                               ; preds = %1
  %16 = load i32, i32* %5, align 4
  %17 = add nsw i32 %16, 1
  %18 = load %struct.amdgpu_device*, %struct.amdgpu_device** %3, align 8
  %19 = getelementptr inbounds %struct.amdgpu_device, %struct.amdgpu_device* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store i32 %17, i32* %21, align 4
  %22 = load %struct.amdgpu_device*, %struct.amdgpu_device** %3, align 8
  %23 = getelementptr inbounds %struct.amdgpu_device, %struct.amdgpu_device* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = icmp sgt i32 %26, 4
  br i1 %27, label %28, label %31

28:                                               ; preds = %15
  %29 = load i32, i32* @EINVAL, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %2, align 4
  br label %62

31:                                               ; preds = %15
  %32 = load i32, i32* %4, align 4
  %33 = load i32, i32* @MC_VM_XGMI_LFB_CNTL, align 4
  %34 = load i32, i32* @PF_LFB_REGION, align 4
  %35 = call i32 @REG_GET_FIELD(i32 %32, i32 %33, i32 %34)
  %36 = load %struct.amdgpu_device*, %struct.amdgpu_device** %3, align 8
  %37 = getelementptr inbounds %struct.amdgpu_device, %struct.amdgpu_device* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 0
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  store i32 %35, i32* %39, align 4
  %40 = load %struct.amdgpu_device*, %struct.amdgpu_device** %3, align 8
  %41 = getelementptr inbounds %struct.amdgpu_device, %struct.amdgpu_device* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = icmp sgt i32 %44, 3
  br i1 %45, label %46, label %49

46:                                               ; preds = %31
  %47 = load i32, i32* @EINVAL, align 4
  %48 = sub nsw i32 0, %47
  store i32 %48, i32* %2, align 4
  br label %62

49:                                               ; preds = %31
  %50 = load i32, i32* @GC, align 4
  %51 = load i32, i32* @mmMC_VM_XGMI_LFB_SIZE, align 4
  %52 = call i32 @RREG32_SOC15(i32 %50, i32 0, i32 %51)
  %53 = load i32, i32* @MC_VM_XGMI_LFB_SIZE, align 4
  %54 = load i32, i32* @PF_LFB_SIZE, align 4
  %55 = call i32 @REG_GET_FIELD(i32 %52, i32 %53, i32 %54)
  %56 = shl i32 %55, 24
  %57 = load %struct.amdgpu_device*, %struct.amdgpu_device** %3, align 8
  %58 = getelementptr inbounds %struct.amdgpu_device, %struct.amdgpu_device* %57, i32 0, i32 0
  %59 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %58, i32 0, i32 0
  %60 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %59, i32 0, i32 2
  store i32 %56, i32* %60, align 4
  br label %61

61:                                               ; preds = %49, %1
  store i32 0, i32* %2, align 4
  br label %62

62:                                               ; preds = %61, %46, %28
  %63 = load i32, i32* %2, align 4
  ret i32 %63
}

declare dso_local i32 @RREG32_SOC15(i32, i32, i32) #1

declare dso_local i32 @REG_GET_FIELD(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
